recursion.hanoi.lessons.recursion.hanoi.SplitHanoi2.scala.error
SplitHanoi2:19: error: missing arguments for method aux;
follow this method with `_' if you want to treat it as a partially applied function
  	aux(height-1, aux+1, src, dst2, other, dst1)
                      ^